Close S6204, S2629, S135, S4144 backend smells (19 -> 0)
S6204 (Collectors.toList -> toList): applied across ProductRepositoryAdapter,
but reverted two of them (applyToEntity's setSizeStocks/setVariants) after a
real regression -- Hibernate's merge path clears @ElementCollection lists
in place, and an immutable List throws UnsupportedOperationException on the
second save of an already-persisted product. Caught by AuthorizationGuardsIT
and CustomerAddressControllerIT, not by the existing ProductRepositoryAdapterIT
suite, which only ever exercised the insert path; added a characterization
test for the update path so this can't regress silently again.

S2629 (method invoked unconditionally in a log statement): suppressed four
trivial getter calls, wrapped the one doing real regex work
(ProductAiOpenAiClient.preview) in isWarnEnabled().

S135 (multiple break/continue per loop): restructured via De Morgan or
extraction in MigrateCategoryImagesUseCase, SalesDocumentFileStorage and
CreateOrderUseCase. The CreateOrderUseCase fix initially nested guards deep
enough to push two methods over the S3776 cognitive-complexity threshold
(16 vs 15) -- caught by the next Sonar scan and resolved by extracting each
loop body into its own small method instead, which satisfies both rules.

S4144 (identical method implementations): deleted a dead getStock() alias on
ProductVariantEmbeddable, suppressed two intentional ones with existing
justification/tests (ProductVariant.getStock(),
CashRegisterRepositoryAdapter.findHistory), merged two byte-identical test
helpers in FlywayPublishedMigrationCompatibilityIT.

Real Sonar re-scan confirms all four rules at 0, bugs at 0, gate OK.
634 tests green.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>